Add reset functionality and improve UI feedback
- Added reset route in web_categorizer.py to reset app state while preserving API key
- Added Reset button to UI with corresponding JavaScript functionality
- Updated footer in base.html
- Fixed issue with app getting stuck in 'complete' state
- Improved error handling and user feedback with flash messages

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,9 @@ requests==2.31.0
 
 # Additional dependencies for better user experience
 colorama==0.4.6  # For colored terminal output
+
+# Testing dependencies
+pytest==7.4.0
+pytest-mock==3.11.1
+pytest-cov==4.1.0
+pytest-flask==1.2.0
